<resources>
    <string name="app_name">LearnFacialExpressions</string>
    <string name="language">English</string>
    <string name="choose_language">Select Language</string>
    <string name="change_language">Your language is English</string>
    <string name="score">Score</string>
    <string name="scores">Scores</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="info">Information</string>
    <string name="option">Option</string>
    <string name="question">Question</string>
    <string name="new_game">New Game</string>
    <string name="upload_image">Upload Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="save_score">Save Score</string>
    <string name="try_again">Try Again</string>
    <string name="home">Home</string>
    <string name="test_finish">Test Has Finished!</string>
    <string name="next">Next</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="learn_expressions">Learn Facial Expressions</string>
    <string name="result">Result</string>
    <!-- Expressions -->
    <string name="confident">confident</string>
    <string name="curious">curious</string>
    <string name="peaceful">peaceful</string>
    <string name="sleepy">sleepy</string>
    <string name="excited">excited</string>
    <string name="sad">sad</string>
    <string name="happy">happy</string>
    <string name="shy">shy</string>
    <string name="frightened">frightened</string>
    <string name="surprised">surprised</string>
    <string name="angry">angry</string>
    <string name="disgusted">disgusted</string>
    <string name="bored">bored</string>
    <string name="nervous">nervous</string>
    <string name="regretful">regretful</string>
    <string name="suspicious">suspicious</string>

    <string-array name="expression_array">
        <item name="confident">confident</item>
        <item name="curious">curious</item>
        <item name="peaceful">peaceful</item>
        <item name="sleepy">sleepy</item>
        <item name="excited">excited</item>
        <item name="sad">sad</item>
        <item name="happy">happy</item>
        <item name="shy">shy</item>
        <item name="frightened">frightened</item>
        <item name="surprised">surprised</item>
        <item name="angry">angry</item>
        <item name="disgusted">disgusted</item>
        <item name="bored">bored</item>
        <item name="nervous">nervous</item>
        <item name="regretful">regretful</item>
        <item name="suspicious">suspicious</item>
    </string-array>

    <string-array name="expressions_EN">
        <item name="confident">confident</item>
        <item name="curious">curious</item>
        <item name="peaceful">peaceful</item>
        <item name="sleepy">sleepy</item>
        <item name="excited">excited</item>
        <item name="sad">sad</item>
        <item name="happy">happy</item>
        <item name="shy">shy</item>
        <item name="frightened">frightened</item>
        <item name="surprised">surprised</item>
        <item name="angry">angry</item>
        <item name="disgusted">disgusted</item>
        <item name="bored">bored</item>
        <item name="nervous">nervous</item>
        <item name="regretful">regretful</item>
        <item name="suspicious">suspicious</item>
    </string-array>

</resources>